--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.sql.init.mode=embedded
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.h2.console.enabled=true
+#defaults for this docker image - vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
+
