--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -18,6 +18,7 @@ spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
 spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
 spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#Enable logging for config troubleshooting
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
