--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>da.springframework</groupId>
+        <groupId>io.github.ctavera</groupId>
         <artifactId>mssc-brewery-bom</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.7</version>
     </parent>
 
     <groupId>da.springframework</groupId>
