264. Open Feign Client. Closes #34

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
 logging.level.da.springframework=debug
+#logging.level.org.springframework.cloud.netflix.eureka=debug
 
