276. Spring Cloud Client Configuration. Fix Circle Ci Error. Closes #38

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.artemis.password=simetraehcapa
 logging.level.da.springframework=debug
 #logging.level.org.springframework.cloud.netflix.eureka=debug
 
+spring.cloud.discovery.enabled=true
+spring.config.import=optional:configserver:
+spring.cloud.config.discovery.service-id=mssc-brewery-config
