--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,12 @@ spring.h2.console.enabled=true
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-logging.level.da.springframework=debug
-#logging.level.org.springframework.cloud.netflix.eureka=debug
-
 spring.cloud.discovery.enabled=true
 spring.config.import=optional:configserver:
 spring.cloud.config.discovery.service-id=mssc-brewery-config
+
+spring.zipkin.base-url=http://localhost:9411/
+spring.main.allow-circular-references=true
+
+logging.level.da.springframework=debug
+#logging.level.org.springframework.cloud.netflix.eureka=debug
