282. Refactor Zipkin Configuration. Closes #41

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.cloud.discovery.enabled=true
 spring.config.import=optional:configserver:
 spring.cloud.config.discovery.service-id=mssc-brewery-config
 
-spring.zipkin.base-url=http://localhost:9411/
+spring.zipkin.enabled=false
 spring.main.allow-circular-references=true
 
 logging.level.da.springframework=debug
