287. Secure Spring Cloud Config Server. Closes #43

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,9 @@ spring.cloud.config.discovery.service-id=mssc-brewery-config
 spring.zipkin.enabled=false
 spring.main.allow-circular-references=true
 
+spring.cloud.config.fail-fast=true
+spring.cloud.config.username=MyUserName
+spring.cloud.config.password=MySecretPassword
+
 logging.level.da.springframework=debug
 #logging.level.org.springframework.cloud.netflix.eureka=debug
