--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,7 @@ spring.cloud.config.fail-fast=true
 spring.cloud.config.username=MyUserName
 spring.cloud.config.password=MySecretPassword
 
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
+
 logging.level.da.springframework=debug
 #logging.level.org.springframework.cloud.netflix.eureka=debug
