Fixing Circle CI error.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.cloud.config.discovery.service-id=mssc-brewery-config
 spring.zipkin.enabled=false
 spring.main.allow-circular-references=true
 
-spring.cloud.config.fail-fast=true
+spring.cloud.config.fail-fast=false
 spring.cloud.config.username=MyUserName
 spring.cloud.config.password=MySecretPassword
 
