308. Docker Compose for Eureka Service & Spring Cloud Config. Fixing the eureka enviroment variable. Closes #48

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.cloud.config.fail-fast=false
 spring.cloud.config.username=MyUserName
 spring.cloud.config.password=MySecretPassword
 
-eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://netflix:eureka@localhost:8761/eureka}
 
 logging.level.da.springframework=debug
 #logging.level.org.springframework.cloud.netflix.eureka=debug
