309. Seccion 27. Tarea 29: Assigment - Docker Compose for Remaining Services. Fixing the wrong property. Closes #49

--- a/src/main/resources/application-localmysql.properties
+++ b/src/main/resources/application-localmysql.properties
@@ -19,7 +19,7 @@ spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
 spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 
 #disable service discovery
-spring.cloud.discovery.enabled=false
+spring.cloud.config.discovery.enabled=false
 
 #Enable logging for config troubleshooting
 #logging.level.org.hibernate.SQL=DEBUG
