--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.h2.console.enabled=true
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
 
-spring.cloud.discovery.enabled=true
+spring.cloud.config.discovery.enabled=true
 spring.config.import=optional:configserver:
 spring.cloud.config.discovery.service-id=mssc-brewery-config
 
